# LightRAG-Studio

./: .env  .env.example  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: main.py
core/: container.py
core/config/: environments.py  settings.py
core/exceptions/: base.py  handlers.py  ingestion.py
core/logging/: logger.py
data/qdrant/: raft_state.json
deployment/docker/: .dockerignore  qdrant-compose.yml
models/: document.py
repositories/document/: document_repository.py  in_memory_document_repository.py
repositories/vector/: __init__.py  base.py  chroma_repository.py  factory.py  faiss_repository.py  in_memory_vector_repository.py  qdrant_repository.py
schemas/: chunk.py  document.py  document_metadata.py  embedding_record.py  ingestion.py  ingestion_metrics.py  ingestion_result.py  llm_request.py  llm_response.py  model_config.py  vector_document.py  vector_result.py
services/embeddings/: base.py  exceptions.py  factory.py  ollama_embeddings.py  openai_embeddings.py
services/ingestion/: chunker.py  file_validator.py  hash_service.py  ingestion_logger.py  ingestion_service.py  metadata_extractor.py  ocr_initializer.py  ocr_service.py  parser_registry.py  retry.py
services/llm/: cost_tracker.py  exceptions.py  llm_service.py  model_registry.py  provider_config.py  provider_loader.py  registry.py  retry_handler.py  token_tracker.py  usage_service.py  usage_tracker.py
tests/: test_mock_provider.py  test_registry.py
tests/integration/: test_app_startup.py  (+1 more)
(+43 files in other folders)
